--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
- 
+html{scroll-behavior: smooth!important;} 
+
  .container{
  	margin-top: 2vw!important;
  	margin-bottom: 2vw!important;
  }
-
+a:hover{
+    text-decoration: none!important;
+}
  	.logo{
  	width: 5rem ; 
  	height: 5rem;
@@ -137,6 +140,28 @@ footer{
     line-height: 1vw;
 }
 
+#myBtn{
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 15px; /* Place the button 15px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 10px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+/*********************************media framework************************/
+
 @media screen and (max-width: 500px){
 
 	.container{
@@ -149,8 +174,8 @@ footer{
  }
 
  .navbar-toggler-icon{
- 	width: 2vw!important;
- 	height: 2vw!important;
+ 	width: 4vw!important;
+ 	height: 4vw!important;
  }
 
 
@@ -217,8 +242,9 @@ footer{
     box-shadow: 0.5vw 0.5vw 1vw 0.5vw #3f3f3f;
 }
 .welcome{
-    line-height: 10vw!important;
-    padding: 0 10vw 0 0;
+    line-height: 3vw!important;
+    padding: 0 0vw 0 0;
 }
 
 }
+
