--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a:hover{
     transform-style: flat;
 }
 
-.col-lg-4{
+.col-lg-4,.col-lg-3,.col-lg-9{
 	box-shadow: 0.2vw 0vw 0.5vw 0.2vw #3f3f3f;
 	margin-top: 2vw;
 }
